examples/test/testpolicy11074.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11074
  namespace: namespace442
spec:
  podSelector:
    matchLabels:
      key35: value34
      key8: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value3
          key30: value37
      podSelector:
        matchLabels:
          key19: value49
          key47: value4
          key42: value21
